fix: set text-align to initial for sashes

--- a/src/sash/sash.module.css
+++ b/src/sash/sash.module.css
@@ -9,6 +9,7 @@
   z-index: 35;
   touch-action: none;
   pointer-events: auto;
+  text-align: initial;
 }
 
 .sash.disabled {
